--- a/app/src/main/res/drawable-v24/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable-v24/ic_launcher_foreground.xml
@@ -4,27 +4,29 @@
     android:height="108dp"
     android:viewportWidth="108"
     android:viewportHeight="108">
-    <path android:pathData="M31,63.928c0,0 6.4,-11 12.1,-13.1c7.2,-2.6 26,-1.4 26,-1.4l38.1,38.1L107,108.928l-32,-1L31,63.928z">
-        <aapt:attr name="android:fillColor">
-            <gradient
-                android:endX="85.84757"
-                android:endY="92.4963"
-                android:startX="42.9492"
-                android:startY="49.59793"
-                android:type="linear">
-                <item
-                    android:color="#44000000"
-                    android:offset="0.0" />
-                <item
-                    android:color="#00000000"
-                    android:offset="1.0" />
-            </gradient>
-        </aapt:attr>
-    </path>
+  <group android:scaleX="0.14472"
+      android:scaleY="0.14472"
+      android:translateX="17.82"
+      android:translateY="17.82">
     <path
-        android:fillColor="#FFFFFF"
-        android:fillType="nonZero"
-        android:pathData="M65.3,45.828l3.8,-6.6c0.2,-0.4 0.1,-0.9 -0.3,-1.1c-0.4,-0.2 -0.9,-0.1 -1.1,0.3l-3.9,6.7c-6.3,-2.8 -13.4,-2.8 -19.7,0l-3.9,-6.7c-0.2,-0.4 -0.7,-0.5 -1.1,-0.3C38.8,38.328 38.7,38.828 38.9,39.228l3.8,6.6C36.2,49.428 31.7,56.028 31,63.928h46C76.3,56.028 71.8,49.428 65.3,45.828zM43.4,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2c-0.3,-0.7 -0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C45.3,56.528 44.5,57.328 43.4,57.328L43.4,57.328zM64.6,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2s-0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C66.5,56.528 65.6,57.328 64.6,57.328L64.6,57.328z"
-        android:strokeWidth="1"
-        android:strokeColor="#00000000" />
+        android:pathData="M0,0h500v500h-500z"
+        android:fillColor="#ffffff"/>
+    <path
+        android:pathData="M314.744,167.789C314.744,187.845 303.127,206.382 283.454,221.406C332.89,241.592 365,274.22 365,311.035C365,372.319 276.022,422 166.262,422C158.155,422 150.162,421.729 142.309,421.202C184.094,362.907 223.779,249.638 213.016,177.012L213.808,176.545L228.988,185.491L224.96,168.631L238.371,157.288L220.711,155.825L213.808,139.925L206.906,155.825L189.245,157.288L202.657,168.631L198.628,185.491L212.917,177.07C208.448,211.252 193.367,245.733 167.675,275.037C157.674,286.443 146.676,296.371 135,304.775V77.526C140.767,77.178 146.624,77 152.556,77C242.13,77 314.744,117.648 314.744,167.789Z"
+        android:fillType="evenOdd">
+      <aapt:attr name="android:fillColor">
+        <gradient 
+            android:startY="77"
+            android:startX="250"
+            android:endY="422"
+            android:endX="250"
+            android:type="linear">
+          <item android:offset="0" android:color="#FF002C9C"/>
+          <item android:offset="0.460792" android:color="#AF4336DF"/>
+          <item android:offset="0.828125" android:color="#6F5C2CE6"/>
+          <item android:offset="1" android:color="#513D67FF"/>
+        </gradient>
+      </aapt:attr>
+    </path>
+  </group>
 </vector>
