--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -9,8 +9,8 @@
     <View
         android:id="@+id/topView"
         android:layout_width="0dp"
-        android:background="@drawable/topview_image"
         android:layout_height="175dp"
+        android:background="@drawable/topview_image"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -21,33 +21,23 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="12dp"
         android:layout_marginTop="12dp"
-        android:layout_marginEnd="6dp"
         android:backgroundTint="#00000000"
-        android:src="@drawable/ic_baseline_arrow_back_ios_new_24"
-        app:layout_constraintEnd_toStartOf="@id/folderImageView"
+        android:src="@drawable/ic_baseline_arrow_back_ios_new_24_white"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
-    <ImageView
-        android:id="@+id/folderImageView"
-        android:layout_width="32dp"
-        android:layout_height="32dp"
-        android:src="@drawable/ic_baseline_folder_open_24"
-        app:layout_constraintBottom_toBottomOf="@id/pathTextView"
-        app:layout_constraintEnd_toStartOf="@id/pathTextView"
-        app:layout_constraintStart_toEndOf="@id/backButton"
-        app:layout_constraintTop_toTopOf="@id/pathTextView" />
 
     <TextView
         android:id="@+id/pathTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="12dp"
+        android:layout_marginStart="8dp"
         android:ellipsize="end"
         android:maxLines="2"
+        android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="@id/backButton"
-        app:layout_constraintStart_toEndOf="@id/folderImageView"
+        app:layout_constraintStart_toEndOf="@id/backButton"
         app:layout_constraintTop_toTopOf="@id/backButton"
+        tools:layout_editor_absoluteX="110dp"
         tools:text="home" />
 
     <TextView
@@ -64,9 +54,11 @@
         tools:text="home" />
 
     <TextView
+        android:layout_marginTop="12dp"
         android:id="@+id/sizeTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textColor="@color/white"
         app:layout_constraintStart_toStartOf="@id/titleTextView"
         app:layout_constraintTop_toBottomOf="@id/titleTextView"
         tools:text="n개의 별이 담겨있어요" />
@@ -176,8 +168,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginHorizontal="24dp"
-                android:paddingBottom="80dp"
                 android:orientation="vertical"
+                android:paddingBottom="80dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -191,35 +183,35 @@
         android:layout_height="wrap_content"
         android:contentDescription="@string/addFolder"
         android:src="@drawable/ic_fab_folder"
-        app:tint="#586A86"
         app:backgroundTint="#E9EFF9"
         app:layout_constraintBottom_toBottomOf="@id/fabButton"
         app:layout_constraintEnd_toEndOf="@id/fabButton"
         app:layout_constraintStart_toStartOf="@id/fabButton"
-        app:layout_constraintTop_toTopOf="@id/fabButton" />
+        app:layout_constraintTop_toTopOf="@id/fabButton"
+        app:tint="#586A86" />
 
 
     <ImageView
         android:id="@+id/folderAdd"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="135dp"
         android:layout_marginEnd="5dp"
-        android:visibility="gone"
+        android:layout_marginBottom="135dp"
         android:src="@drawable/ic_folder_add_info"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="@id/fabButton"
-        app:layout_constraintEnd_toStartOf="@id/fabButton"/>
+        app:layout_constraintEnd_toStartOf="@id/fabButton" />
 
     <ImageView
         android:id="@+id/bookmarkAdd"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="70dp"
         android:layout_marginEnd="5dp"
-        android:visibility="gone"
+        android:layout_marginBottom="70dp"
         android:src="@drawable/ic_bookmark_add_info"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="@id/fabButton"
-        app:layout_constraintEnd_toStartOf="@id/fabButton"/>
+        app:layout_constraintEnd_toStartOf="@id/fabButton" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/addLinkButton"
@@ -227,12 +219,13 @@
         android:layout_height="wrap_content"
         android:contentDescription="@string/addLink"
         android:src="@drawable/ic_baseline_star_border_24"
-        app:tint="#586A86"
         app:backgroundTint="#E9EFF9"
         app:layout_constraintBottom_toBottomOf="@id/fabButton"
         app:layout_constraintEnd_toEndOf="@id/fabButton"
         app:layout_constraintStart_toStartOf="@id/fabButton"
-        app:layout_constraintTop_toTopOf="@id/fabButton" />
+        app:layout_constraintTop_toTopOf="@id/fabButton"
+        app:tint="#586A86" />
+
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fabButton"
         android:layout_width="wrap_content"
@@ -243,9 +236,9 @@
         android:contentDescription="@string/add"
         android:src="@drawable/ic_fab_add"
         app:backgroundTint="#123466"
-        app:tint="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:tint="@color/white" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
