--- a/app/src/main/res/layout/activity_add_folder.xml
+++ b/app/src/main/res/layout/activity_add_folder.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/wholeLayout"
     android:layout_width="match_parent"
@@ -104,19 +103,20 @@
             android:gravity="end"
             android:orientation="horizontal">
 
+
             <android.widget.Button
-                android:id="@+id/cancelButton"
+                android:id="@+id/cancel_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="12dp"
-                android:background="@drawable/button_cancel" />
+                android:background="@drawable/ripple_drawable_cancel" />
 
             <android.widget.Button
                 android:id="@+id/saveButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:background="@drawable/button_save"
-                android:textColor="@color/white" />
+                android:layout_marginStart="12dp"
+                android:background="@drawable/ripple_drawable_save" />
+
         </LinearLayout>
 
     </LinearLayout>
