--- a/app/src/main/res/layout/activity_add_link.xml
+++ b/app/src/main/res/layout/activity_add_link.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/bottomSheetDashBoardLayout"
     android:layout_width="match_parent"
@@ -27,7 +26,7 @@
             android:layout_height="5dp"
             android:layout_gravity="center"
             android:layout_marginVertical="22dp"
-            android:background="@color/gray_cc"/>
+            android:background="@color/gray_cc" />
 
         <LinearLayout
             android:id="@+id/linkNameLayout"
@@ -202,8 +201,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:paddingVertical="5dp"
-            android:paddingHorizontal="30dp">
+            android:paddingHorizontal="30dp"
+            android:paddingVertical="5dp">
 
             <ImageView
                 android:layout_width="28dp"
@@ -232,24 +231,23 @@
             android:id="@+id/buttonLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="end"
-            android:layout_marginRight="30dp"
             android:layout_marginTop="30dp"
+            android:layout_marginRight="30dp"
+            android:gravity="end"
             android:orientation="horizontal">
 
             <android.widget.Button
-                android:id="@+id/cancelButton"
+                android:id="@+id/cancel_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="12dp"
-                android:background="@drawable/button_cancel" />
+                android:background="@drawable/ripple_drawable_cancel" />
 
             <android.widget.Button
                 android:id="@+id/saveButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:background="@drawable/button_save"
-                android:textColor="@color/white" />
+                android:layout_marginStart="12dp"
+                android:background="@drawable/ripple_drawable_save" />
         </LinearLayout>
 
     </LinearLayout>
